--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,22 @@ header {
   padding-top: 16px;
   height: 18px;
   min-height: 70px;
+
   /*border-bottom: chocolate 2px solid;*/
 }
+/*header .container{
+  background-color:#f4f4f4;
+  padding-top: 0;
+  margin:0;
+  height: 18px;
+  min-height: 70px;
+  position:fixed;
+  display:inline;
+  width:80%;
+  float:left;
+
+}*/
+
 ul{
   margin:0;
   padding: 0;
@@ -42,6 +56,7 @@ header a{
   font-size:16px;
   text-transform: uppercase;
   color:black;
+  font-family:arial;
 }
 header li{
   float:left;
@@ -73,9 +88,11 @@ header a:hover{
 #showcase{
   min-height: 400px;
   background:url('../img/slider1.png') 0 -180px no-repeat;
+  /*background: linear-gradient(to right, rgba(255,120,0,10), rgba(255,0,0,0.2));*/
   color:white;
   height: 500px;
   margin-top: 0px;
+
 
 }
 #showcase h1{
@@ -95,16 +112,19 @@ header a:hover{
 #showcase .btn{
   width:270px;
   height: 60px;
-  border-radius: 50px;
+  padding: 12px 28px;
+  border-radius: 20px;
+  display: inline-block;
   background-color:chocolate;
   font-size:29px;
   color:white;
   text-transform: uppercase;
   border:0px;
 }
-#showcase button .btn-hover{
-  background-color:midnightblue;
+#showcase  .btn:hover{
+  background-color:darkslategray;
   cursor: pointer;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 /*newsletter*/
@@ -131,37 +151,58 @@ width: 250px;
 /*Boxes */
 
 #boxes{
-  margin-top:20px;
+  margin-top:3px;
+  padding:20px;
 }
 #boxes .box{
   float:left;
-  width:45%;
+  width:40%;
   padding:10px;
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-bottom: 40px;
   text-align: center;
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.03), 4px 4px 4px 4px rgba(0, 0, 0, 0.02);
+}
+#boxes .box:hover {
+  float:left;
+  width:40%;
+  padding:10px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+  background-color: darkslategray;
+  overflow: hidden;
+  transition: .5s ease;
+}
+#boxes .box:hover h3 {
+  color:white;
+  font-weight:bold;
+  font-size: 21px;
+}
+#boxes .box:hover p {
+  color:white;
+  font-size:17px;
+  font-family: arial;
 }
 #boxes h1{
   padding:10px;
   color:chocolate;
   font-size:32px;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform:uppercase;
   text-align: center;
 
 }
-#boxes .box img{
-  width:100px;
-  height: 100px;
-  border-radius: 40px;
-  text-align: left;
+/*#boxes .subtitle{
+  margin-bottom: :20px;
+  padding:0px;
+  color:darkslategray;
+  text-align: center;
+  font-size:24px;
+  font-family:arial;
 }
-#boxes .box h3{
-  color:chocolate;
-  font-size:21px;
-  font-weight: bold;
-}
-#boxes .box p{
-  font-size:17px;
-}
+*/
 #boxes p{
   margin-bottom: :20px;
   padding:0px;
@@ -170,6 +211,28 @@ width: 250px;
   font-size:20px;
   font-family:arial;
 }
+#boxes .box img{
+  float:left;
+  width:100px;
+  height: 100px;
+  border-radius: 40px;
+  text-align:left;
+}
+#boxes .box h3{
+  color:chocolate;
+  font-size:21px;
+  font-weight: bold;
+}
+#boxes .box p{
+  font-size:17px;
+  font-family: arial;
+}
+
+#boxes p .shorttitle{
+  border: 10px solid:chocolate;
+}
+
+/* Footer */
 footer {
   background-color: chocolate;
   padding: 10px;
