--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@ button{
   color:white;
   font-size:16px;
 }
+.dark{
+  padding: 15px;
+  background:darkgray;
+  margin-top:10px;
+  margin-bottom: 10px;
+}
 /* Header */
 header {
   background-color:#f4f4f4;
@@ -51,14 +57,14 @@ ul{
   margin:0;
   padding: 0;
 }
-header a{
+header nav a{
   text-decoration: none;
   font-size:16px;
   text-transform: uppercase;
   color:black;
   font-family:arial;
 }
-header li{
+header nav li{
   float:left;
   display: block;
   padding: 0 20px 0 20px;
@@ -87,26 +93,25 @@ header a:hover{
 /* showcase */
 #showcase{
   min-height: 400px;
-  background:url('../img/slider1.png') 0 -180px no-repeat;
+  background:url('../img/slider1.png') 0 0px no-repeat;
   /*background: linear-gradient(to right, rgba(255,120,0,10), rgba(255,0,0,0.2));*/
   color:white;
-  height: 500px;
   margin-top: 0px;
 
 
 }
 #showcase h1{
-  margin-top: 100px;
+  margin-top: 50px;
   color:white;
-  font-size:44px;
+  font-size:40px;
   font-weight: bold;
   line-height: 1.3;
-  margin-bottom: 10px;
+  margin-bottom: 6px;
 
 }
 #showcase p{
   color:white;
-  font-size:25px;
+  font-size:22px;
   font-family:arial;
 }
 #showcase .btn{
@@ -114,6 +119,7 @@ header a:hover{
   height: 60px;
   padding: 12px 28px;
   border-radius: 20px;
+  margin-bottom: 5px;
   display: inline-block;
   background-color:chocolate;
   font-size:29px;
@@ -231,7 +237,27 @@ width: 250px;
 #boxes p .shorttitle{
   border: 10px solid:chocolate;
 }
-
+/* Article Main */
+article#main-col{
+  float:left;
+  width:65%;
+}
+article .pagetitle{
+  font-size:23px;
+  font-weight: 600;
+  color:chocolate
+}
+/* Sidebar */
+aside#sidebar{
+  float:right;
+  margin-top:10px;
+  width:30%;
+}
+aside h3{
+  font-size:23px;
+  font-weight: 600;
+  color:chocolate
+}
 /* Footer */
 footer {
   background-color: chocolate;
@@ -241,4 +267,46 @@ footer p{
   color:white;
   font-weight: bold;
   text-align: center;
+}
+
+/*media queries */
+@media(max-width: 768px){
+  header #logo,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box,
+  #boxes .box:hover{
+    float:none;
+    text-align: center;
+    width:100%;
+  }
+  header{
+    padding-bottom: 20px;
+  }
+  #showcase h1{
+    margin-top:40px;
+  }
+  #newsletter .btn1{
+    display:block;
+    width:100%;
+  }
+  #newsletter form input[type="email"]{
+    width:100%;
+    margin-bottom:5px;
+  }
+  #boxes .box,
+  #boxes .box:hover{
+    padding-right:0;
+    margin-left: 0;
+    text-align: left;
+  }
+  article#main-col,
+  aside#sidebar{
+    float:none;
+    text-align:center;
+    width:100%;
+  }
+
 }
